--- a/package.json
+++ b/package.json
@@ -35,12 +35,16 @@
     "@radix-ui/react-dialog": "^1.0.5",
     "@types/bcryptjs": "^2.4.4",
     "@types/chart.js": "^2.9.38",
+    "@types/crypto-js": "^4.2.2",
     "autoprefixer": "^10.4.16",
     "bcryptjs": "^2.4.3",
     "chart.js": "^4.5.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "crypto-js": "^4.2.0",
     "electron-updater": "^6.1.4",
+    "jspdf": "^3.0.3",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.287.0",
     "next": "^13.5.4",
     "postcss": "^8.4.31",
@@ -52,7 +56,8 @@
     "recharts": "^2.8.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "^3.3.3",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@electron-toolkit/eslint-config-prettier": "^1.0.1",
@@ -70,6 +75,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "prettier": "^3.0.3",
+    "ts-node": "^10.9.2",
     "typescript": "^5.2.2",
     "vite": "^4.4.11"
   }
