--- a/tsconfig.web.json
+++ b/tsconfig.web.json
@@ -6,11 +6,13 @@
     "src/renderer/src/**/*.tsx",
     "src/renderer/pages/**/*",
     "src/renderer/components/**/*",
-    "src/preload/*.d.ts"
+    "src/preload/*.d.ts",
+    "src/shared/**/*"
   ],
   "compilerOptions": {
     "composite": true,
     "jsx": "react-jsx",
+    "ignoreDeprecations": "5.0",
     "baseUrl": ".",
     "paths": {
       "@renderer/*": [
