--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "electron-app",
+  "name": "bizflow",
   "version": "1.0.0",
-  "description": "An Electron application with React and TypeScript",
+  "description": "BizFlow - Modern Business Management System with AI-powered insights",
   "main": "./out/main/index.js",
-  "author": "example.com",
-  "homepage": "https://electron-vite.org",
+  "author": "BizFlow Team",
+  "homepage": "https://github.com/medhatjachour/electron-app",
   "scripts": {
-    "dev": "npm run prisma:copy && electron-vite dev",
-    "build": "electron-vite build",
-    "postinstall": "electron-builder install-app-deps && npm run prisma:copy",
+    "dev": "electron-vite dev",
+    "build": "npm run prisma:generate && electron-vite build",
+    "postinstall": "electron-builder install-app-deps",
     "lint": "eslint . --ext .ts,.tsx",
     "format": "prettier --write .",
     "typecheck:node": "tsc --noEmit -p tsconfig.node.json --composite false",
@@ -16,14 +16,15 @@
     "typecheck": "npm run typecheck:node && npm run typecheck:web",
     "start": "electron-vite preview",
     "build:unpack": "npm run build && electron-builder --dir",
-    "build:win": "npm run build && electron-builder --win",
+    "build:win": "npm run build && electron-builder --win --x64",
     "build:mac": "npm run build && electron-builder --mac",
     "build:linux": "npm run build && electron-builder --linux",
-    "prisma:generate": "prisma generate && npm run prisma:copy",
+    "prisma:generate": "prisma generate",
+    "create-template-db": "node scripts/generate-template-db.js",
     "prisma:migrate": "prisma migrate dev",
     "prisma:seed": "ts-node prisma/seed.ts",
     "prisma:studio": "prisma studio",
-    "prisma:copy": "xcopy /E /I /Y src\\generated\\prisma out\\generated\\prisma 2>nul || (exit 0)"
+    "prisma:push": "prisma db push"
   },
   "prisma": {
     "seed": "ts-node prisma/seed.ts"
@@ -37,25 +38,19 @@
     "@types/chart.js": "^2.9.38",
     "@types/crypto-js": "^4.2.2",
     "@types/react-window": "^1.8.8",
-    "autoprefixer": "^10.4.16",
     "bcryptjs": "^2.4.3",
     "chart.js": "^4.5.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "crypto-js": "^4.2.0",
     "electron-updater": "^6.1.4",
-    "jspdf": "^3.0.3",
-    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.287.0",
-    "next": "^13.5.4",
-    "postcss": "^8.4.31",
     "prisma": "^5.4.2",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.30.1",
     "react-window": "^1.8.11",
-    "recharts": "^2.8.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "^3.3.3",
     "tailwindcss-animate": "^1.0.7",
@@ -78,6 +73,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "prettier": "^3.0.3",
+    "sharp": "^0.34.4",
     "ts-node": "^10.9.2",
     "typescript": "^5.2.2",
     "vite": "^4.4.11"
