--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "clsx": "^2.0.0",
     "crypto-js": "^4.2.0",
     "electron-updater": "^6.1.4",
+    "html2pdf.js": "^0.12.1",
     "lucide-react": "^0.287.0",
     "prisma": "^5.4.2",
     "react": "^18.2.0",
