fix: Include template database creation in build process
- Add create-template-db to all build scripts (win, mac, linux)
- Template database now includes schema and admin user (username: 0000, password: 0000)
- Fixes database initialization issues in production builds
- Resolves 'table does not exist' errors on first run

--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "typecheck": "npm run typecheck:node && npm run typecheck:web",
     "start": "electron-vite preview",
     "build:unpack": "npm run build && electron-builder --dir",
-    "build:win": "npm run build && electron-builder --win --x64",
-    "build:mac": "npm run build && electron-builder --mac",
-    "build:linux": "npm run build && electron-builder --linux",
+    "build:win": "npm run create-template-db && npm run build && electron-builder --win --x64",
+    "build:mac": "npm run create-template-db && npm run build && electron-builder --mac",
+    "build:linux": "npm run create-template-db && npm run build && electron-builder --linux",
     "prisma:generate": "prisma generate",
     "create-template-db": "node scripts/generate-template-db.js",
     "prisma:migrate": "prisma migrate dev",
