Fix: Add Prisma binaryTargets for Windows builds in GitHub Actions
- Add binaryTargets to schema.prisma for cross-platform support
- Include windows, darwin, darwin-arm64, and debian targets
- Add verification step in GitHub Actions to ensure Windows binary exists
- Update electron-builder.yml with requestedExecutionLevel
- Add comprehensive WINDOWS_BUILD_FIX.md documentation

This fixes the white screen issue in Windows .exe builds by ensuring
query_engine-windows.dll.node is generated and packaged correctly.

--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -39,6 +39,8 @@ win:
   # Optional: Code signing (uncomment for production)
   # certificateFile: ${WINDOWS_CERTIFICATE_FILE}
   # certificatePassword: ${WINDOWS_CERTIFICATE_PASSWORD}
+  # Ensure native modules work properly
+  requestedExecutionLevel: asInvoker
 nsis:
   artifactName: ${name}-${version}-setup.${ext}
   shortcutName: ${productName}
