--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -43,6 +43,19 @@ jobs:
       - name: Generate Prisma Client
         run: npx prisma generate
       
+      - name: Verify Prisma binaries
+        run: |
+          Write-Host "Checking generated Prisma binaries..."
+          Get-ChildItem -Path "src/generated/prisma" -Filter "*.node" -Recurse | ForEach-Object {
+            Write-Host "Found: $($_.Name) - $([math]::Round($_.Length/1MB, 2)) MB"
+          }
+          if (!(Test-Path "src/generated/prisma/query_engine-windows.dll.node")) {
+            Write-Error "Windows Prisma binary not found!"
+            exit 1
+          }
+          Write-Host "✓ Windows Prisma binary verified"
+        shell: pwsh
+      
       - name: Prepare template database
         run: |
           if (!(Test-Path "prisma/template.db")) {
@@ -134,6 +147,17 @@ jobs:
       
       - name: Generate Prisma Client
         run: npx prisma generate
+      
+      - name: Verify Prisma binaries
+        run: |
+          Write-Host "Verifying Windows Prisma binary..."
+          if (Test-Path "src/generated/prisma/query_engine-windows.dll.node") {
+            Write-Host "✓ Windows Prisma binary found"
+          } else {
+            Write-Error "Windows Prisma binary not found!"
+            exit 1
+          }
+        shell: pwsh
       
       - name: Prepare template database
         run: |
