Fix: Initialize database schema on first Windows launch
- Add automatic database schema creation from migrations
- Include prisma/migrations folder in extraResources
- Create default admin user (0000/0000) on first run
- Regenerate template.db in GitHub Actions workflow
- Add fallback schema creation if migrations not found

Fixes white screen caused by missing database tables

--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -58,12 +58,26 @@ jobs:
       
       - name: Prepare template database
         run: |
-          if (!(Test-Path "prisma/template.db")) {
-            Write-Host "Creating template database..."
-            npx prisma migrate deploy
-            npx prisma db seed
+          Write-Host "Creating fresh template database..."
+          if (Test-Path "prisma/template.db") {
+            Remove-Item "prisma/template.db" -Force
+            Write-Host "Removed existing template database"
+          }
+          
+          # Create fresh template database
+          $env:DATABASE_URL = "file:./prisma/template.db"
+          Write-Host "Running Prisma migrations..."
+          npx prisma migrate deploy
+          
+          Write-Host "Seeding database..."
+          npx prisma db seed
+          
+          if (Test-Path "prisma/template.db") {
+            $size = (Get-Item "prisma/template.db").Length / 1KB
+            Write-Host "✓ Template database created: $([math]::Round($size, 2)) KB"
           } else {
-            Write-Host "Template database already exists"
+            Write-Error "Failed to create template database!"
+            exit 1
           }
         shell: pwsh
       
