--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -23,11 +23,14 @@ files:
 extraResources:
   - from: prisma/template.db
     to: prisma/template.db
+  - from: prisma/migrations
+    to: prisma/migrations
 asarUnpack:
   - resources/**
   - src/generated/**
   - node_modules/@prisma/**
   - node_modules/.prisma/**
+  - prisma/**
 win:
   executableName: BizFlow
   icon: build/icon.ico
