--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -73,22 +73,32 @@ jobs:
           Write-Host "Seeding database..."
           npx prisma db seed
           
-          # Verify template database was created
+          # Verify template database was created - check multiple locations
+          Write-Host "Verifying template database creation..."
+          Write-Host "Current directory contents:"
+          Get-ChildItem -Filter "*.db" | ForEach-Object { Write-Host "  - $($_.FullName)" }
+          Write-Host "Prisma directory contents:"
+          Get-ChildItem "prisma" -Filter "*.db" | ForEach-Object { Write-Host "  - $($_.FullName)" }
+          
           if (Test-Path "prisma/template.db") {
             $size = (Get-Item "prisma/template.db").Length / 1KB
-            Write-Host "✓ Template database created successfully: $([math]::Round($size, 2)) KB"
+            Write-Host "✓ Template database found in prisma folder: $([math]::Round($size, 2)) KB"
+          } elseif (Test-Path "template.db") {
+            Write-Host "Found template.db in root directory, moving to prisma folder..."
+            Move-Item "template.db" "prisma/template.db" -Force
+            $size = (Get-Item "prisma/template.db").Length / 1KB
+            Write-Host "✓ Template database moved successfully: $([math]::Round($size, 2)) KB"
+          } elseif (Test-Path "prisma/dev.db") {
+            Write-Host "Found dev.db, copying to template.db..."
+            Copy-Item "prisma/dev.db" "prisma/template.db" -Force
+            $size = (Get-Item "prisma/template.db").Length / 1KB
+            Write-Host "✓ Template database created from dev.db: $([math]::Round($size, 2)) KB"
           } else {
-            Write-Host "❌ Template database not found in expected location!"
-            Write-Host "Checking current directory..."
-            if (Test-Path "template.db") {
-              Write-Host "Found template.db in root, moving to prisma folder..."
-              Move-Item "template.db" "prisma/template.db" -Force
-              $size = (Get-Item "prisma/template.db").Length / 1KB
-              Write-Host "✓ Template database moved: $([math]::Round($size, 2)) KB"
-            } else {
-              Write-Error "Failed to create template database!"
-              exit 1
-            }
+            Write-Host "❌ No database file found!"
+            Write-Host "Full directory listing:"
+            Get-ChildItem -Recurse -Filter "*.db" | ForEach-Object { Write-Host "  - $($_.FullName)" }
+            Write-Error "Failed to create or locate template database!"
+            exit 1
           }
         shell: pwsh
       
