--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "clsx": "^2.0.0",
     "crypto-js": "^4.2.0",
     "electron-updater": "^6.1.4",
+    "jspdf": "^3.0.4",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.287.0",
     "prisma": "^5.4.2",
     "react": "^18.2.0",
