--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,11 +2,13 @@ name: Build and Release
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - main
     tags:
       - 'v*'
   pull_request:
-    branches: [ main ]
+    branches:
+      - main
 
 jobs:
   build:
@@ -18,10 +20,10 @@ jobs:
     
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
       
       - name: Setup Node.js
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
           node-version: '18'
           cache: 'npm'
@@ -48,7 +50,7 @@ jobs:
         if: matrix.os == 'macos-latest'
       
       - name: Upload artifacts
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: ${{ matrix.os }}-build
           path: dist/*
@@ -61,18 +63,17 @@ jobs:
     
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
       
       - name: Download all artifacts
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
+        with:
+          path: artifacts
       
       - name: Create Release
         uses: softprops/action-gh-release@v1
         with:
-          files: |
-            ubuntu-latest-build/*
-            windows-latest-build/*
-            macos-latest-build/*
+          files: artifacts/**/*
           draft: false
           prerelease: false
         env:
