--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,11 +12,7 @@ on:
 
 jobs:
   build:
-    runs-on: ${{ matrix.os }}
-    
-    strategy:
-      matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
+    runs-on: windows-latest
     
     steps:
       - name: Checkout code
@@ -38,21 +34,12 @@ jobs:
         run: npm run lint
       
       - name: Build application
-        run: npm run build:linux
-        if: matrix.os == 'ubuntu-latest'
-      
-      - name: Build application
         run: npm run build:win
-        if: matrix.os == 'windows-latest'
-      
-      - name: Build application
-        run: npm run build:mac
-        if: matrix.os == 'macos-latest'
       
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: ${{ matrix.os }}-build
+          name: windows-build
           path: dist/*
           retention-days: 5
 
@@ -65,15 +52,16 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
       
-      - name: Download all artifacts
+      - name: Download Windows build
         uses: actions/download-artifact@v4
         with:
+          name: windows-build
           path: artifacts
       
       - name: Create Release
         uses: softprops/action-gh-release@v1
         with:
-          files: artifacts/**/*
+          files: artifacts/*
           draft: false
           prerelease: false
         env:
