--- a/package.json
+++ b/package.json
@@ -22,12 +22,13 @@
     "prisma:generate": "prisma generate",
     "create-template-db": "node scripts/generate-template-db.js",
     "prisma:migrate": "prisma migrate dev",
-    "prisma:seed": "ts-node prisma/seed-comprehensive.ts",
+    "prisma:seed:prod": "ts-node prisma/seed-production.ts",
+    "prisma:seed:dev": "ts-node prisma/seed-development.ts",
     "prisma:studio": "prisma studio",
     "prisma:push": "prisma db push"
   },
   "prisma": {
-    "seed": "ts-node prisma/seed-comprehensive.ts"
+    "seed": "ts-node prisma/seed-production.ts"
   },
   "dependencies": {
     "@electron-toolkit/preload": "^2.0.0",
