adding unit test for duscount feature

--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
     "prisma:seed:prod": "ts-node prisma/seed-production.ts",
     "prisma:seed:dev": "ts-node prisma/seed-development.ts",
     "prisma:studio": "prisma studio",
-    "prisma:push": "prisma db push"
+    "prisma:push": "prisma db push",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:coverage": "vitest --coverage"
   },
   "prisma": {
     "seed": "ts-node prisma/seed-production.ts"
@@ -63,10 +66,15 @@
     "@electron-toolkit/eslint-config-prettier": "^1.0.1",
     "@electron-toolkit/eslint-config-ts": "^1.0.0",
     "@electron-toolkit/tsconfig": "^1.0.1",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^14.3.1",
+    "@testing-library/user-event": "^14.6.1",
     "@types/node": "^20.8.4",
     "@types/react": "^18.2.27",
     "@types/react-dom": "^18.2.12",
     "@vitejs/plugin-react": "^4.1.0",
+    "@vitest/coverage-v8": "^1.6.1",
+    "@vitest/ui": "^1.6.1",
     "electron": "^26.3.0",
     "electron-builder": "^24.6.4",
     "electron-vite": "^1.0.27",
@@ -74,10 +82,12 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "jsdom": "^23.2.0",
     "prettier": "^3.0.3",
     "sharp": "^0.34.4",
     "ts-node": "^10.9.2",
     "typescript": "^5.2.2",
-    "vite": "^4.4.11"
+    "vite": "^4.4.11",
+    "vitest": "^1.6.1"
   }
 }
