--- a/.env
+++ b/.env
@@ -5,3 +5,8 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="file:./dev.db"
+
+# Email Configuration for Daily Reports
+# Replace with your Gmail credentials
+EMAIL_USER="your-email@gmail.com"
+EMAIL_APP_PASSWORD="your-app-password"
