--- a/package.json
+++ b/package.json
@@ -50,6 +50,8 @@
     "jspdf": "^3.0.4",
     "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.287.0",
+    "node-cron": "^3.0.3",
+    "nodemailer": "^6.9.8",
     "prisma": "^5.4.2",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.3.1",
@@ -70,6 +72,8 @@
     "@testing-library/react": "^14.3.1",
     "@testing-library/user-event": "^14.6.1",
     "@types/node": "^20.8.4",
+    "@types/node-cron": "^3.0.3",
+    "@types/nodemailer": "^6.4.14",
     "@types/react": "^18.2.27",
     "@types/react-dom": "^18.2.12",
     "@vitejs/plugin-react": "^4.1.0",
