--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@types/crypto-js": "^4.2.2",
     "@types/react-window": "^1.8.8",
     "bcryptjs": "^2.4.3",
+    "bwip-js": "^4.8.0",
     "chart.js": "^4.5.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
@@ -58,6 +59,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.30.1",
     "react-window": "^1.8.11",
+    "recharts": "^3.6.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "^3.3.3",
     "tailwindcss-animate": "^1.0.7",
