--- a/package.json
+++ b/package.json
@@ -48,6 +48,10 @@
     "clsx": "^2.0.0",
     "crypto-js": "^4.2.0",
     "electron-updater": "^6.1.4",
+    "escpos": "^3.0.0-alpha.6",
+    "escpos-network": "^3.0.0-alpha.5",
+    "escpos-usb": "^3.0.0-alpha.4",
+    "iconv-lite": "^0.7.2",
     "jspdf": "^3.0.4",
     "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.287.0",
